--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,8 +9,8 @@
     <p><u>Creating a Game:</u></p>
     <p>
     Follow the steps on the menu screen. You must select one of the four tanks (Tank Tank, Assault Tank, Scout Tank, or Demolition Tank) as the tank you will be controlling.
-    You can view each tank's stats by hovering over that tank. To select a tank, simply click on it. In addition to the basic stats, each tank posesses
-    a special ability that may be used once per round and that lasts for 2 seconds. Hover over each tank to review its special ability.
+    To select a tank, simply click on it. In addition to the basic stats, each tank posesses
+    a special ability that may be used once per round and that lasts for 2 seconds.
     </p>
     <p>
     You may either create a new game or join a game. Each game can house 2-4 players. If you create a game, you will be given a game code that should be distributed
@@ -21,7 +21,7 @@
     <p><u>Controlling Your Tank:</u></p>
     <p>
     You can move your tank using the WASD keys on your keyboard. Your tank turret will automatically follow your mouse. To fire, simply left click with your mouse.
-    To use your special ability, hit the SPACE BAR. Your special ability will then last for 2 seconds. It will not be available until the next round.
+    To use your special ability, hit the SPACE BAR. Your special ability will then last for 2 seconds. It will not be available again until the next round.
     </p>
     <p><u>Switching Tanks:</u></p>
     <p>
@@ -45,22 +45,79 @@
     <div id="tankSelection">
       <div id="tankTank" class="tank" (click)="setTankSelection(1)" [ngClass]="{'selected': tankSelection.type == 1}">
         <p class="tankTitle">Tank Tank</p>
+        <div id="tankTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Becomes Immune To Damage For 2 Seconds</div>
       </div>
       <div id="assaultTank" class="tank" (click)="setTankSelection(2)" [ngClass]="{'selected': tankSelection.type == 2}">
         <p class="tankTitle">Assault Tank</p>
+        <div id="assaultTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Gain Infinite Fire Rate For 2 Seconds</div>
       </div>
       <div id="scoutTank" class="tank" (click)="setTankSelection(3)" [ngClass]="{'selected': tankSelection.type == 3}">
         <p class="tankTitle">Scout Tank</p>
+        <div id="scoutTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Turn Invisible For 2 Seconds</div>
       </div>
       <div id="DemolitionTank" class="tank" (click)="setTankSelection(4)" [ngClass]="{'selected': tankSelection.type == 4}">
         <p class="tankTitle">Demolition Tank</p>
+        <div id="demolitionTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Shoot Down Walls For 2 Seconds</div>
       </div>
     </div>
   </div>
   <div class="step">
     <p>4. SELECT YOUR GAME MODE</p>
-    <button class="gameModeButton">Create New Game</button><br>
-    <button class="gameModeButton">Join Existing Game</button>
+    <button class="gameModeButton" (click)="createGame()">Create New Game</button><br>
+    <button class="gameModeButton" (click)="joinGame()">Join Existing Game</button>
   </div>
+  <br><br>
 </div>
 
