--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -43,7 +43,7 @@
   <div class="step">
     <p>3. CHOOSE YOUR TANK</p>
     <div id="tankSelection">
-      <div id="tankTank" class="tank" (click)="setTankSelection(1)" [ngClass]="{'selected': tankSelection.type == 1}">
+      <div id="tankTank" class="tank" (click)="setTankSelection(1)" [ngClass]="{'selected': tankSelection == 1}">
         <p class="tankTitle">Tank Tank</p>
         <div id="tankTankImage"></div>
         <div class="stats">
@@ -60,7 +60,7 @@
         </div>
         <div class="specialAbility">Becomes Immune To Damage For 2 Seconds</div>
       </div>
-      <div id="assaultTank" class="tank" (click)="setTankSelection(2)" [ngClass]="{'selected': tankSelection.type == 2}">
+      <div id="assaultTank" class="tank" (click)="setTankSelection(2)" [ngClass]="{'selected': tankSelection == 2}">
         <p class="tankTitle">Assault Tank</p>
         <div id="assaultTankImage"></div>
         <div class="stats">
@@ -77,7 +77,7 @@
         </div>
         <div class="specialAbility">Gain Infinite Fire Rate For 2 Seconds</div>
       </div>
-      <div id="scoutTank" class="tank" (click)="setTankSelection(3)" [ngClass]="{'selected': tankSelection.type == 3}">
+      <div id="scoutTank" class="tank" (click)="setTankSelection(3)" [ngClass]="{'selected': tankSelection == 3}">
         <p class="tankTitle">Scout Tank</p>
         <div id="scoutTankImage"></div>
         <div class="stats">
@@ -94,7 +94,7 @@
         </div>
         <div class="specialAbility">Turn Invisible For 2 Seconds</div>
       </div>
-      <div id="DemolitionTank" class="tank" (click)="setTankSelection(4)" [ngClass]="{'selected': tankSelection.type == 4}">
+      <div id="DemolitionTank" class="tank" (click)="setTankSelection(4)" [ngClass]="{'selected': tankSelection == 4}">
         <p class="tankTitle">Demolition Tank</p>
         <div id="demolitionTankImage"></div>
         <div class="stats">
