More work on waiting room.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <canvas #canvas id="canvas"></canvas>
 <app-loading *ngIf="isLoading"></app-loading>
 <app-menu *ngIf="showMenu" id="menu"></app-menu>
-<app-waitingroom *ngIf="showWaitingRoom"></app-waitingroom>
+<app-waitingroom *ngIf="showWaitingRoom" id="waitingRoom"></app-waitingroom>
