--- a/src/app/components/waitingroom/waitingroom.component.css
+++ b/src/app/components/waitingroom/waitingroom.component.css
@@ -1,3 +1,119 @@
+#tankGuideComponent {
+  position: fixed;
+  z-index: 3;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.6);
+}
+
+#tankGuideContent {
+  background-color: rgb(19, 21, 33);
+  color: white;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  border-radius: 5px;
+  margin-bottom: 200px;
+}
+
+#exitButton {
+  width: 30px;
+  height: 30px;
+  float: right;
+  background-image: url("/assets/exit.png");
+  cursor: pointer;
+}
+
+#spaceFloat {
+  width: 30px;
+  height: 30px;
+  float: left;
+}
+
+#exitButton:hover {
+  transform: scale(1.1);
+}
+
+#tankGuideTitle {
+  font-size: xx-large;
+  font-weight: bold;
+  text-align: center;
+}
+
+#tankSelection {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.tankGuideTank {
+  width: 200px;
+  height: 290px;
+  margin: 10px;
+  border: solid 1px white;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  background-color: rgb(0,0,0);
+  background-color: rgb(0,0,0,0.6);
+}
+
+.tankGuideTank:hover {
+  transform: translateY(-5px);
+}
+
+.selected {
+  box-shadow: 0px 0px 20px 5px white;
+}
+
+.tankTitle {
+  font-size: 20px;
+}
+
+.stats {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.statsTitle {
+  text-align: center;
+  padding-top: 10px;
+  width: 90px;
+  height: 30px;
+  color: white;
+}
+
+.statsImage {
+  width: 100px;
+  height: 30px;
+}
+
+.specialAbility {
+  text-align: center;
+  margin-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 #waitingRoomComponent {
   width: 100%;
   height: 100vh;
@@ -16,11 +132,57 @@
   margin-bottom: 0px;
 }
 
+#gameCodeArea {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  margin: 0;
+}
+
 #gameCode {
   color: white;
   font-size: 25px;
   font-weight: bold;
-  margin-bottom: 0px;
+  margin-right: 10px;
+}
+
+#copyImage {
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+  background-image: url("/assets/copy.png");
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+#copyImage:hover {
+  transform: scale(1.1);
+}
+
+#changeTankImage {
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+  background-image: url("/assets/change.png");
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+#changeTankImage:hover {
+  transform: scale(1.1);
+}
+
+#leaveGame {
+  width: 24px;
+  height: 24px;
+  background-image: url("/assets/leave.png");
+  cursor: pointer;
+}
+
+#leaveGame:hover {
+  transform: scale(1.1);
 }
 
 #tanksContainer {
@@ -34,7 +196,7 @@
 
 .tank {
   width: 200px;
-  height: 300px;
+  height: 200px;
   border-radius: 5px;
   margin: 15px;
   display: flex;
@@ -64,12 +226,12 @@
   color: white;
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .tankName {
   color: white;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -110,4 +272,8 @@
   color: black;
   background-color: rgb(102, 240, 0);
   cursor: pointer;
+}
+
+#startButton:hover {
+  transform: scale(1.05);
 }
