--- a/src/app/components/waitingroom/waitingroom.component.html
+++ b/src/app/components/waitingroom/waitingroom.component.html
@@ -1,9 +1,93 @@
+<div id="tankGuideComponent" *ngIf="showTankGuide">
+  <div id="tankGuideContent">
+    <div id="exitButton" (click)="showTankGuide = false"></div>
+    <div id="spaceFloat"></div>
+    <div id="tankGuideTitle">SWITCH TANKS</div>
+    <div id="tankSelection">
+      <div id="tankTank" class="tankGuideTank" (click)="setTankSelection(1); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 1}">
+        <p class="tankTitle">Tank Tank</p>
+        <div class="tankTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Becomes Immune To Damage For 2 Seconds</div>
+      </div>
+      <div id="assaultTank" class="tankGuideTank" (click)="setTankSelection(2); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 2}">
+        <p class="tankTitle">Assault Tank</p>
+        <div class="assaultTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Gain Infinite Fire Rate For 2 Seconds</div>
+      </div>
+      <div id="scoutTank" class="tankGuideTank" (click)="setTankSelection(3); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 3}">
+        <p class="tankTitle">Scout Tank</p>
+        <div class="scoutTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Turn Invisible For 2 Seconds</div>
+      </div>
+      <div id="DemolitionTank" class="tankGuideTank" (click)="setTankSelection(4); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 4}">
+        <p class="tankTitle">Demolition Tank</p>
+        <div class="demolitionTankImage"></div>
+        <div class="stats">
+          <div class="statsTitle">Health</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Speed</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
+        </div>
+        <div class="stats">
+          <div class="statsTitle">Fire Rate</div>
+          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+        </div>
+        <div class="specialAbility">Shoot Down Walls For 2 Seconds</div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div id="waitingRoomComponent">
   <p id="title">WAITING ROOM</p>
-  <p id="gameCode">Game Code: {{gameCode}}</p>
+  <div id="gameCodeArea">
+    <p id="gameCode">Game Code: {{gameCode}}</p>
+    <div id="copyImage" (click)="copyGameCode()" title="Copy Game Code"></div>
+    <div id="changeTankImage" (click)="showTankGuide = true" title="Change Tanks"></div>
+    <div id="leaveGame" (click)="leaveGame()" title="Leave Game"></div>
+  </div>
+  
   <div id="tanksContainer">
     <div *ngFor="let serverTank of serverTanks; index as i" class="tank" [ngClass]="{'blueTank': serverTank.color == 1, 'greenTank': serverTank.color == 2, 'orangeTank': serverTank.color == 3, 'redTank': serverTank.color == 4}">
-      <p class="gamerName">{{serverTank.gamerName}}</p>
+      <p class="gamerName"><u>{{serverTank.gamerName}}</u></p>
       <p class="tankName" *ngIf="serverTank.type == 1">Tank Tank</p>
       <p class="tankName" *ngIf="serverTank.type == 2">Assault Tank</p>
       <p class="tankName" *ngIf="serverTank.type == 3">Scout Tank</p>
