Working on maze generation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-loading *ngIf="isLoading"></app-loading>
 <app-menu *ngIf="showMenu" id="menu"></app-menu>
 <app-waitingroom *ngIf="showWaitingRoom" id="waitingRoom"></app-waitingroom>
+<app-gameroom  *ngIf="showGameRoom" id="gameRoom"></app-gameroom>
