--- a/src/app/components/waitingroom/waitingroom.component.css
+++ b/src/app/components/waitingroom/waitingroom.component.css
@@ -243,6 +243,13 @@
   background-image: url("/assets/tanks/tankturret.png"), url("/assets/tanks/tankbody.png");
 }
 
+.score {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
 .assaultTankImage {
   width: 49px;
   height: 35px;
