Initial work on wall collisions.

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -38,7 +38,7 @@
   </div>
   <div class="step">
     <p>2. ENTER YOUR GAMER NAME</p>
-    <input #gamerNameInput type="text" id="gamerNameInput" maxlength="15" placeholder="Gamer Name" (input)="updateGamerName()">
+    <input #gamerNameInput type="text" id="gamerNameInput" maxlength="15" placeholder="Gamer Name" (input)="updateGamerName()" spellcheck="false">
   </div>
   <div class="step">
     <p>3. CHOOSE YOUR TANK</p>
