--- a/src/app/components/gameroom/gameroom.component.css
+++ b/src/app/components/gameroom/gameroom.component.css
@@ -1,3 +1,25 @@
+#heartCounter {
+  position: absolute;
+  width: 100vw;
+  height: 30px;
+  top: 10px;
+  left: 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.heart {
+  width: 30px;
+  height: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-size: cover;
+  background-image: url("/assets/heart.png")
+}
+
 #scoreBoardComponent {
   width: 100%;
   height: 100vh;
