--- a/src/app/components/gameroom/gameroom.component.html
+++ b/src/app/components/gameroom/gameroom.component.html
@@ -1,3 +1,10 @@
+<div id="heartCounter">
+  <div class="heart" *ngFor="let _ of generateRange(health)">
+
+  </div>
+</div>
+
+<!--
 <div id="scoreBoardComponent">
   <div id="scoreBoard">
     <div *ngFor="let serverTank of serverTanks; index as i" class="tank" [ngClass]="{'ultimateActive': serverTank.ultimateActive, 'blue': serverTank.color == 1, 'green': serverTank.color == 2, 'orange': serverTank.color == 3, 'red': serverTank.color == 4}">
@@ -6,3 +13,4 @@
     </div>
   </div>
 </div>
+-->
