--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -15,18 +15,13 @@
     <p>
     You may either create a new game or join a game. Each game can house 2-4 players. If you create a game, you will be given a game code that should be distributed
     to all others seeking to join your game. If you join a game, you will be required to enter a valid game code. Once all players have joined the game, the game
-    creator may start the game. Once started, the game will continue forever until there are not enough players left in the game to continue. To exit the game, simply
-    hit the "Return to Menu" button at the top right or exit out of the browser.
+    creator may start a round. While in the Waiting Room, you will notice three buttons to the right of the game code. These are used to copy the game code,
+    switch your tank type, and leave the game. After each round, everyone will be returned to the menu until the game admin starts a new round.
     </p>
     <p><u>Controlling Your Tank:</u></p>
     <p>
     You can move your tank using the WASD keys on your keyboard. Your tank turret will automatically follow your mouse. To fire, simply left click with your mouse.
     To use your special ability, hit the SPACE BAR. Your special ability will then last for 2 seconds. It will not be available again until the next round.
-    </p>
-    <p><u>Switching Tanks:</u></p>
-    <p>
-    After each round has finished, you will have 10 seconds to switch your tank. To switch, click on the "Switch Tanks" button below your name in the score area.
-    Then select the new tank you will be controlling. If you have not selected before the 10 seconds has elapsed, you will continue with the tank from the last round.
     </p>
   </div>
 </div>
