Added locks to bullets. Updated tank stats. Updated instructions.

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,26 +2,33 @@
   <div id="instructionsContent">
     <div id="exitButton" (click)="showInstructions = false"></div>
     <h1>WELCOME TO TANK TANGO!</h1>
+    <h3>SKIM AT YOUR OWN RISK!</h3>
     <p>
-    Tank Tango is an online, multiplayer, tank-vs-tank game. Your goal is to be the last tank alive. You and each of your competitors will be placed
-    in an arena in which the fight will commence. If you are the last tank standing, you will be awarded 1 point and the game will reset.
+    Tank Tango is a fast-paced, online, multiplayer, tank-vs-tank game. Your goal is to be the last tank alive at the end of each round. You and each of your competitors will be placed
+    in a maze-like arena in which the fight will commence. If you are the last tank standing, you will be awarded 1 point and the game will reset.
     </p>
     <p><u>Creating a Game:</u></p>
     <p>
     Follow the steps on the menu screen. You must select one of the four tanks (Tank Tank, Assault Tank, Scout Tank, or Demolition Tank) as the tank you will be controlling.
-    To select a tank, simply click on it. In addition to the basic stats, each tank posesses
-    a special ability that may be used once per round and that lasts for 2 seconds.
+    To select a tank, simply click on it. In addition to the basic stats, each tank possesses
+    a special ability that lasts for 2 seconds and may only be used once per round.
     </p>
     <p>
     You may either create a new game or join a game. Each game can house 2-4 players. If you create a game, you will be given a game code that should be distributed
-    to all others seeking to join your game. If you join a game, you will be required to enter a valid game code. Once all players have joined the game, the game
+    to all others seeking to join your game. If you join a game, you will be required to enter a valid game code. Once all players have entered the Waiting Room, the game
     creator may start a round. While in the Waiting Room, you will notice three buttons to the right of the game code. These are used to copy the game code,
-    switch your tank type, and leave the game. After each round, everyone will be returned to the menu until the game admin starts a new round.
+    switch your tank type, and leave the game. After each round, everyone will be returned to the Waiting Room until the game admin starts a new round.
     </p>
     <p><u>Controlling Your Tank:</u></p>
     <p>
-    You can move your tank using the WASD keys on your keyboard. Your tank turret will automatically follow your mouse. To fire, simply left click with your mouse.
+    You can move your tank using the WASD keys on your keyboard. Your tank turret will automatically follow your mouse. To fire, simply LEFT CLICK with your mouse.
     To use your special ability, hit the SPACE BAR. Your special ability will then last for 2 seconds. It will not be available again until the next round.
+    </p>
+    <p><u>Important Notes:</u></p>
+    <p>
+    It is recommended that you can verbally communicate with all players while playing Tank Tango. Once you enter the arena, the round does not start until the loading icon at the top right ceases and the background music begins playing. Your remaining health
+    will appear at the top of the screen. When a tank is hit by a bullet, you will hear a metal clink. Pay attention to when tanks use their special abilities. You will
+    hear a sci-fi bubbling noise when a special ability is activated and the player's name at the bottom of the screen will turn red.
     </p>
   </div>
 </div>
@@ -33,7 +40,7 @@
   </div>
   <div class="step">
     <p>2. ENTER YOUR GAMER NAME</p>
-    <input #gamerNameInput type="text" id="gamerNameInput" maxlength="15" placeholder="Gamer Name" (input)="updateGamerName()" spellcheck="false">
+    <input #gamerNameInput type="text" id="gamerNameInput" maxlength="10" placeholder="Gamer Name" (input)="updateGamerName()" spellcheck="false">
   </div>
   <div class="step">
     <p>3. CHOOSE YOUR TANK</p>
@@ -51,7 +58,7 @@
         </div>
         <div class="stats">
           <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
         </div>
         <div class="specialAbility">Becomes Immune To Damage For 2 Seconds</div>
       </div>
@@ -60,7 +67,7 @@
         <div id="assaultTankImage"></div>
         <div class="stats">
           <div class="statsTitle">Health</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
         </div>
         <div class="stats">
           <div class="statsTitle">Speed</div>
@@ -85,7 +92,7 @@
         </div>
         <div class="stats">
           <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
         </div>
         <div class="specialAbility">Turn Invisible For 2 Seconds</div>
       </div>
@@ -102,7 +109,7 @@
         </div>
         <div class="stats">
           <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
+          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
         </div>
         <div class="specialAbility">Shoot Down Walls For 2 Seconds</div>
       </div>
