--- a/src/app/components/waitingroom/waitingroom.component.html
+++ b/src/app/components/waitingroom/waitingroom.component.html
@@ -3,76 +3,7 @@
     <div id="exitButton" (click)="showTankGuide = false"></div>
     <div id="spaceFloat"></div>
     <div id="tankGuideTitle">SWITCH TANKS</div>
-    <div id="tankSelection">
-      <div id="tankTank" class="tankGuideTank" (click)="setTankSelection(1); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 1}">
-        <p class="tankTitle">Tank Tank</p>
-        <div class="tankTankImage"></div>
-        <div class="stats">
-          <div class="statsTitle">Health</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Speed</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
-        </div>
-        <div class="specialAbility">Becomes Immune To Damage For 2 Seconds</div>
-      </div>
-      <div id="assaultTank" class="tankGuideTank" (click)="setTankSelection(2); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 2}">
-        <p class="tankTitle">Assault Tank</p>
-        <div class="assaultTankImage"></div>
-        <div class="stats">
-          <div class="statsTitle">Health</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Speed</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
-        </div>
-        <div class="specialAbility">Gain Infinite Fire Rate For 2 Seconds</div>
-      </div>
-      <div id="scoutTank" class="tankGuideTank" (click)="setTankSelection(3); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 3}">
-        <p class="tankTitle">Scout Tank</p>
-        <div class="scoutTankImage"></div>
-        <div class="stats">
-          <div class="statsTitle">Health</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/2Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Speed</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/4Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
-        </div>
-        <div class="specialAbility">Turn Invisible For 2 Seconds</div>
-      </div>
-      <div id="DemolitionTank" class="tankGuideTank" (click)="setTankSelection(4); showTankGuide = false" [ngClass]="{'selected': tankSelection.type == 4}">
-        <p class="tankTitle">Demolition Tank</p>
-        <div class="demolitionTankImage"></div>
-        <div class="stats">
-          <div class="statsTitle">Health</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Speed</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
-        </div>
-        <div class="stats">
-          <div class="statsTitle">Fire Rate</div>
-          <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
-        </div>
-        <div class="specialAbility">Shoot Down Walls For 2 Seconds</div>
-      </div>
-    </div>
+    <app-tankselection (closeTankGuide)="showTankGuide = false;"></app-tankselection>
   </div>
 </div>
 
