Initial commit for server

--- a/src/app/components/gameroom/gameroom.component.html
+++ b/src/app/components/gameroom/gameroom.component.html
@@ -1,13 +1,11 @@
-<div id="heartCounter">
-  <div class="heart" *ngFor="let _ of generateRange(health)">
-  </div>
-</div>
-
 <div id="scoreBoardComponent">
   <div id="scoreBoard">
     <div *ngFor="let serverTank of serverTanks; index as i" class="tank" [ngClass]="{'ultimateActive': serverTank.ultimateActive, 'blue': serverTank.color == 1, 'green': serverTank.color == 2, 'orange': serverTank.color == 3, 'red': serverTank.color == 4}">
       <p class="text">{{serverTank.gamerName}}</p>
-      <p class="text">Score: {{serverTank.score}}</p>
+      <div id="heartCounter">
+        <div class="heart" *ngFor="let _ of generateRange(serverTank.health)">
+        </div>
+      </div>
     </div>
   </div>
 </div>
