--- a/src/app/components/gameroom/gameroom.component.css
+++ b/src/app/components/gameroom/gameroom.component.css
@@ -1,12 +1,8 @@
 #heartCounter {
-  position: absolute;
-  width: 100vw;
-  height: 30px;
-  top: 10px;
-  left: 0px;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -14,8 +10,8 @@
 .heart {
   width: 30px;
   height: 30px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 1px;
+  margin-right: 1px;
   background-size: cover;
   background-image: url("/assets/heart.png")
 }
