--- a/src/app/components/waitingroom/waitingroom.component.css
+++ b/src/app/components/waitingroom/waitingroom.component.css
@@ -203,6 +203,12 @@
   background-image: url("/assets/tanks/demolitionturret.png"), url("/assets/tanks/demolitionbody.png");
 }
 
+#gameAdminSection {
+  margin-top: 20px;
+  text-align: center;
+  color: white;
+}
+
 #startButton {
   width: 200px;
   height: 50px;
@@ -216,3 +222,83 @@
 #startButton:hover {
   transform: scale(1.05);
 }
+
+#chatBox {
+  position: absolute;
+  width: 300px;
+  height: 230px;
+  bottom: 10px;
+  left: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#chat {
+  overflow: auto;
+  height: 200px;
+  width: 100%;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.6);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: left;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+.chatMessage {
+  margin: 0px;
+  margin-bottom: 10px;
+}
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+.green {
+  color: green;
+}
+
+.orange {
+  color: orange;
+}
+
+#send {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#sendInput {
+  width: 270px;
+  height: 30px;
+  box-sizing: border-box;
+  padding-block: 0px;
+}
+
+#sendIcon {
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  background-image: url("/assets/send.png");
+  border: solid 1px white;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+
