Updates to instructions.

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -11,23 +11,24 @@
     <p>
     Follow the steps on the menu screen. You must select one of the four tanks (Tank Tank, Assault Tank, Scout Tank, or Demolition Tank) as the tank you will be controlling.
     To select a tank, simply click on it. In addition to the basic stats, each tank possesses
-    a special ability that lasts for 2 seconds and may only be used once per round.
+    a special ability that lasts for 2 seconds and may only be used once per round. Please review each tank's special ability so that you are not surprised in the arena.
     </p>
     <p>
     You may either create a new game or join a game. Each game can house 2-4 players. If you create a game, you will be given a game code that should be distributed
-    to all others seeking to join your game. If you join a game, you will be required to enter a valid game code. Once all players have entered the Waiting Room, the game
-    creator may start a round. While in the Waiting Room, you will notice three buttons to the right of the game code. These are used to copy the game code,
-    switch your tank type, and leave the game. After each round, everyone will be returned to the Waiting Room until the game admin starts a new round.
+    to all others seeking to join your game. If you join a game, you will be required to enter a valid game code. When you are ready for the round to start, simply click
+    the "Ready Up" button. Once all players have indicated that they are ready, the game will begin. While in the Waiting Room, you will notice three buttons to the right of the game code. These are used to copy the game code,
+    switch your tank type, and leave the game. After each round, everyone will be returned to the Waiting Room until a new round begins.
     </p>
     <p><u>Controlling Your Tank:</u></p>
     <p>
-    You can move your tank using the WASD keys on your keyboard. Your tank turret will automatically follow your mouse. To fire, simply LEFT CLICK with your mouse.
-    To use your special ability, hit the SPACE BAR. Your special ability will then last for 2 seconds. It will not be available again until the next round.
+    You can move your tank using the WASD keys on your keyboard. The A and D keys are used to rotate your tank. The W and S keys are used to move your tank forward or backward.
+    Your tank turret will automatically follow your mouse. To fire, simply LEFT CLICK with your mouse.
+    To use your special ability, hit the SPACE BAR. Your special ability will last for 2 seconds. It will not be available again until the next round.
     </p>
     <p><u>Important Notes:</u></p>
     <p>
-    It is recommended that you can verbally communicate with all players while playing Tank Tango. Once you enter the arena, the round does not start until the loading icon at the top right ceases and the background music begins playing. Your remaining health
-    will appear at the top of the screen. When a tank is hit by a bullet, you will hear a metal clink. Pay attention to when tanks use their special abilities. You will
+    It is recommended that you can verbally communicate with all players while playing Tank Tango, although there is a chat available in the Waiting Room. Once you enter the arena, the round does not start until the loading icon at the top right ceases and the background music begins playing. All players' remaining health
+    will appear at the bottom of the screen. When a tank is hit by a bullet, you will hear a metal clink. Pay attention to when tanks use their special abilities. You will
     hear a sci-fi bubbling noise when a special ability is activated and the player's name at the bottom of the screen will turn red.
     </p>
   </div>
