--- a/src/app/components/tankselection/tankselection.component.html
+++ b/src/app/components/tankselection/tankselection.component.html
@@ -14,7 +14,7 @@
       <div class="statsTitle">Fire Rate</div>
       <div class="statsImage" style="background-image: url('/assets/stats/3Stats.png');"></div>
     </div>
-    <div class="specialAbility">Becomes Immune To Damage For 2 Seconds</div>
+    <div class="specialAbility">Become Immune To Damage For 2 Seconds</div>
   </div>
   <div id="assaultTank" class="tank" (click)="setTankSelection(2)" [ngClass]="{'selected': tankSelection.type == 2}">
     <p class="tankTitle">Assault Tank</p>
